# esp32s3-eye

./: README.md
esp32s3-eye-sdcard-usbotg/: CMakeLists.txt  sdkconfig
esp32s3-eye-sdcard-usbotg/main/: CMakeLists.txt  audio_inference.cc  audio_inference.h  idf_component.yml  main.c  main.c-original  micro_speech_model.cc  micro_speech_model.h  model_settings.h  voting.c  voting.h
